# investment-portfolio

./: README.md  main.py  pyproject.toml
src/models/: allocation.py  common_names.py  enums.py  hierarchy.py  node.py  portfolio.py  providers.py
src/models/utils/: fetcher.py
src/ui/: callbacks.py  diagram.py  portfolio_ui.py  rebalancer.py
src/utils/: fetcher.py  sankey.py
