[tool.poetry]
package-mode = false

[project]
name = "investment-portfolio"
version = "0"
description = ""
authors = [
    {name = "garyellow",email = "gary20011110@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "streamlit (>=1.42.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "types-requests (>=2.32.0.20241016,<3.0.0.0)",
    "pandas-stubs (>=2.2.3.241126,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
